--- a/index.css
+++ b/index.css
@@ -1,28 +1,8 @@
-.container {
-    border:solid 1px rgb(255, 32, 32);
-    display:flex;
-height: 500px;
-align-content: space-between;
-justify-content: space-between;
-flex-flow: wrap;
-align-content: flex-start;
-}
-.container  div {
-    border:solid 1px blue;
-    order: 2;
-width: 200px;
-  
-}
-.one{
-    height: 100px;
-    width: 100px;
-}
-.three{
-    width: 200px;
-    height: 200px;
-}
 
-.two{
-    width: 300px;
-    height: 300px;
+.button{
+
+    width:300px;
+    height: 200px;
+    color: chartreuse;
+    background-color: chartreuse;
 }
